--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-body{
+body, html{
   font-family: 'Lato', sans-serif;
-  font-size: 15px;
+  font-size: 16px !important;
 }
 .nopadding {
     padding: 0px;
@@ -243,6 +243,7 @@ color: white;
   margin: auto;
   left: 0px;
   right: 0px;
+  font-size: 16px !important; 
 }
 .mat-icon.material-icons.ng-star-inserted::before {
   content: 'check';
