--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -1,4 +1,4 @@
-<mat-horizontal-stepper #stepper [selectedIndex]="3">
+<mat-horizontal-stepper #stepper>
   <ng-template matStepperIcon="edit">
     <mat-icon>done</mat-icon>
   </ng-template>
@@ -764,7 +764,7 @@
         </div>
       </div>
       <div>
-        <div class="col-md-12 nopadding logistic-wrapper">
+        <div class="col-md-12 logistic-wrapper">
           <span class="header-text-style"> Patient Program Logistics</span>
           <hr>
         
@@ -796,7 +796,7 @@
       </div>
       <div class="clearfix"></div>
       <div>
-        <div class="col-md-12 nopadding speaker-wrapper">
+        <div class="col-md-12 speaker-wrapper">
           <span class="header-text-style"> Speaker</span>
           <hr>
        
