--- a/src/styles.css
+++ b/src/styles.css
@@ -38,8 +38,36 @@ mat-card .form-group{
   }
 /* Change in Mat-form-fields component End */
 
+.row.custome-row{
+  margin-left: -60px;
+  margin-right: -59px;
+} 
+.AD-training-material-wrapper .odd-content-panel{
+  opacity: 0.8;
+  background-color: #D8D8D8;
+  padding-top: 26px;
+  padding-bottom: 30px;
+  padding-left: 65px;
+  padding-right: 40px;
+}
+.AD-training-material-wrapper .even-content-panel{
+   background-color:white;
+   padding-top: 26px;
+   padding-bottom: 30px;
+   padding-left: 65px;
+   padding-right: 40px;
+}
 
-
+.AD-training-material-wrapper .even-content-panel ul,
+.AD-training-material-wrapper .odd-content-panel ul{
+  list-style-type: none;
+  padding-left: 0px; 
+}
+.AD-training-material-wrapper .even-content-panel ul li,
+.AD-training-material-wrapper .odd-content-panel ul li{
+  font-size: 16px;	line-height: 22px; 
+  margin-bottom: 6px;
+}
 
 
 body, html{
@@ -391,6 +419,14 @@ tr.mat-header-row {
   font-size: 23px !important;
 } */
 @media only screen and (max-width: 800px) {
+  .row.custome-row {
+      margin-left: -30px;
+      margin-right: -30px;
+  }
+  .AD-training-material-wrapper .even-content-panel,
+  .AD-training-material-wrapper .odd-content-panel{
+    padding: 25px;
+  }
   .mat-horizontal-stepper-header-container{
       white-space: nowrap; 
       align-items: center; 
