Initiate training page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,10 +47,10 @@
             </li>
 
             <li>
-                <a [routerLink]="['/mystory']" [routerLinkActive]="['router-link-active']">
+                <a [routerLink]="['/initiatetraining']" [routerLinkActive]="['router-link-active']">
                   <span class="nav-pad">
                     <img src="assets/icons/slides.svg" class="img-responsive" />
-                    MY STORY
+                    SPEAKER
                   </span>
                 </a>
               </li>
