--- a/src/app/initiate-training/initiate-training.component.css
+++ b/src/app/initiate-training/initiate-training.component.css
@@ -33,6 +33,18 @@
 .AD-training-material-wrapper .even-content-panel {
     padding-bottom: 0px !important;
   }
+.select-date-popup-parent .daliog-master-heading{ 
+    color: #2B62CA;	font-family: "Helvetica Neue";	font-size: 28px;	font-weight: bold;	line-height: 34px;	text-align: center;
+    margin-bottom: 35px;
+}
+.close-position{
+    position: absolute;
+    right: -36px;
+    top: -34px;
+    z-index: 99;
+    cursor: pointer;
+}
+
   @media only screen and (max-width: 800px) {
     .training-initiate-admin-wrapper mat-card{
         padding: 15px; 
