--- a/src/app/initiate-training/initiate-training.component.html
+++ b/src/app/initiate-training/initiate-training.component.html
@@ -61,7 +61,7 @@
             </div>
             <div class="col-md-3">
               <div class="form-group" *ngIf="checkbox.checked">
-                <button mat-button class="btn btn-blue">Add Date</button>
+                <button mat-button class="btn btn-blue" (click)="openDialog()">Add Date</button>
               </div>
             </div>
           </div>
