--- a/src/styles.css
+++ b/src/styles.css
@@ -129,6 +129,7 @@ hr {
 .mat-form-field-infix{
   width: 100% !important; 
   border-top: 0px; 
+  border: 1px solid #CECECE;
 } 
 .mat-horizontal-stepper-header-container{
   border-radius: 8px !important; 
