--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,6 +65,24 @@
             </li>
 
             <li>
+                <a [routerLink]="['/training']" [routerLinkActive]="['router-link-active']">
+                  <span class="nav-pad">
+                    <img src="assets/icons/training.svg" class="img-responsive" />
+                    UPLOAD REFERENCE MATERIAL
+                  </span>
+                </a>
+              </li>
+
+              <li>
+                  <a [routerLink]="['/speaker-content']" [routerLinkActive]="['router-link-active']">
+                    <span class="nav-pad">
+                      <img src="assets/icons/training.svg" class="img-responsive" />
+                      MANAGE SPEAKER CONTENT
+                    </span>
+                  </a>
+              </li>
+             
+            <li>
               <a [routerLink]="['/add-venue']" [routerLinkActive]="['router-link-active']">
                 <span class="nav-pad">
                     <span class="glyphicon glyphicon-map-marker"></span>
