--- a/src/app/manage-spkeaker-content/manage-spkeaker-content.component.html
+++ b/src/app/manage-spkeaker-content/manage-spkeaker-content.component.html
@@ -93,7 +93,7 @@
               <mat-checkbox>Global Admin</mat-checkbox>
             </div> 
             <div class="clearfix"></div>
-            <div class="col-md-12 text-right"> 
+            <div class="col-md-12 text-right white-btn-wrap"> 
                 <button mat-button class="btn btn-white">Upload Files</button>
             </div>
             <div class="col-md-12 text-center">
