--- a/src/app/manage-spkeaker-content/manage-spkeaker-content.component.css
+++ b/src/app/manage-spkeaker-content/manage-spkeaker-content.component.css
@@ -33,12 +33,21 @@
     color: #757575;	font-family: "Helvetica Neue";	font-size: 14px;	line-height: 16px;
     margin-bottom: 10px;
 }
-
+.white-btn-wrap .btn-white{
+      margin-top: 45px;
+      margin-bottom: 45px;  
+}
 
 
 
 @media only screen and (max-width: 800px) {
-    .venue-admin-wrapper mat-card{
+    .assign-content-wrapper mat-card{
         padding: 25px;  
     }
+    .white-btn-wrap .btn-white{
+        margin: 20px 0px; 
+  }
+  .text-right.white-btn-wrap{
+    text-align: center;
+  }
 }
