--- a/src/app/manage-spkeaker-content/manage-spkeaker-content.component.html
+++ b/src/app/manage-spkeaker-content/manage-spkeaker-content.component.html
@@ -94,7 +94,7 @@
             </div> 
             <div class="clearfix"></div>
             <div class="col-md-12 text-right white-btn-wrap"> 
-                <button mat-button class="btn btn-white">Upload Files</button>
+                <button mat-button class="btn btn-white" (click)="openDialog()">Upload Files</button>
             </div>
             <div class="col-md-12 text-center">
                 <button mat-button class="btn btn-blue">Submit</button>
