--- a/src/styles.css
+++ b/src/styles.css
@@ -47,8 +47,8 @@ mat-card .form-group{
   .mat-form-field-appearance-legacy .mat-form-field-wrapper {
     padding-bottom: 0px;
   }
-  .mat-dialog-container {
-    height: 500px !important;	width: 570px !important;	border-radius: 8px !important;	background-color: #FFFFFF;	box-shadow: 0 6px 24px 0 rgba(0,0,0,0.38);
+  .mat-dialog-container { 
+    width: 570px !important;	border-radius: 8px !important;	background-color: #FFFFFF;	box-shadow: 0 6px 24px 0 rgba(0,0,0,0.38);
     padding: 53px !important;
   }
 /* Change in Mat-form-fields component End */
